crates/parser/tests/snapshots/statements/valid/0051@4.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "\nCREATE INDEX ON films ((lower(title)));"
---
Parse {
    cst: SourceFile@0..40
      Newline@0..1 "\n"
      IndexStmt@1..40
        Create@1..7 "CREATE"
        Whitespace@7..8 " "
        Index@8..13 "INDEX"
        Whitespace@13..14 " "
        On@14..16 "ON"
        Whitespace@16..17 " "
        RangeVar@17..22
          Ident@17..22 "films"
        Whitespace@22..23 " "
        Ascii40@23..24 "("
        Ascii40@24..25 "("
        IndexElem@25..36
          FuncCall@25..36
            Ident@25..30 "lower"
            Ascii40@30..31 "("
            ColumnRef@31..36
              Ident@31..36 "title"
        Ascii41@36..37 ")"
        Ascii41@37..38 ")"
        Ascii41@38..39 ")"
        Ascii59@39..40 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: IndexStmt(
                IndexStmt {
                    idxname: "",
                    relation: Some(
                        RangeVar {
                            catalogname: "",
                            schemaname: "",
                            relname: "films",
                            inh: true,
                            relpersistence: "p",
                            alias: None,
                            location: 16,
                        },
                    ),
                    access_method: "btree",
                    table_space: "",
                    index_params: [
                        Node {
                            node: Some(
                                IndexElem(
                                    IndexElem {
                                        name: "",
                                        expr: Some(
                                            Node {
                                                node: Some(
                                                    FuncCall(
                                                        FuncCall {
                                                            funcname: [
                                                                Node {
                                                                    node: Some(
                                                                        String(
                                                                            String {
                                                                                sval: "lower",
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ],
                                                            args: [
                                                                Node {
                                                                    node: Some(
                                                                        ColumnRef(
                                                                            ColumnRef {
                                                                                fields: [
                                                                                    Node {
                                                                                        node: Some(
                                                                                            String(
                                                                                                String {
                                                                                                    sval: "title",
                                                                                                },
                                                                                            ),
                                                                                        ),
                                                                                    },
                                                                                ],
                                                                                location: 30,
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ],
                                                            agg_order: [],
                                                            agg_filter: None,
                                                            over: None,
                                                            agg_within_group: false,
                                                            agg_star: false,
                                                            agg_distinct: false,
                                                            func_variadic: false,
                                                            funcformat: CoerceExplicitCall,
                                                            location: 24,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        indexcolname: "",
                                        collation: [],
                                        opclass: [],
                                        opclassopts: [],
                                        ordering: SortbyDefault,
                                        nulls_ordering: SortbyNullsDefault,
                                    },
                                ),
                            ),
                        },
                    ],
                    index_including_params: [],
                    options: [],
                    where_clause: None,
                    exclude_op_names: [],
                    idxcomment: "",
                    index_oid: 0,
                    old_node: 0,
                    old_create_subid: 0,
                    old_first_relfilenode_subid: 0,
                    unique: false,
                    nulls_not_distinct: false,
                    primary: false,
                    isconstraint: false,
                    deferrable: false,
                    initdeferred: false,
                    transformed: false,
                    concurrent: false,
                    if_not_exists: false,
                    reset_default_tblspc: false,
                },
            ),
            range: 0..39,
        },
    ],
}
