crates/parser/tests/snapshots/statements/valid/0051@9.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "\nCREATE INDEX code_idx ON films (code) TABLESPACE indexspace;"
---
Parse {
    cst: SourceFile@0..61
      Newline@0..1 "\n"
      IndexStmt@1..61
        Create@1..7 "CREATE"
        Whitespace@7..8 " "
        Index@8..13 "INDEX"
        Whitespace@13..14 " "
        Ident@14..22 "code_idx"
        Whitespace@22..23 " "
        On@23..25 "ON"
        Whitespace@25..26 " "
        RangeVar@26..31
          Ident@26..31 "films"
        Whitespace@31..32 " "
        Ascii40@32..33 "("
        IndexElem@33..37
          Ident@33..37 "code"
        Ascii41@37..38 ")"
        Whitespace@38..39 " "
        Tablespace@39..49 "TABLESPACE"
        Whitespace@49..50 " "
        Ident@50..60 "indexspace"
        Ascii59@60..61 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: IndexStmt(
                IndexStmt {
                    idxname: "code_idx",
                    relation: Some(
                        RangeVar {
                            catalogname: "",
                            schemaname: "",
                            relname: "films",
                            inh: true,
                            relpersistence: "p",
                            alias: None,
                            location: 25,
                        },
                    ),
                    access_method: "btree",
                    table_space: "indexspace",
                    index_params: [
                        Node {
                            node: Some(
                                IndexElem(
                                    IndexElem {
                                        name: "code",
                                        expr: None,
                                        indexcolname: "",
                                        collation: [],
                                        opclass: [],
                                        opclassopts: [],
                                        ordering: SortbyDefault,
                                        nulls_ordering: SortbyNullsDefault,
                                    },
                                ),
                            ),
                        },
                    ],
                    index_including_params: [],
                    options: [],
                    where_clause: None,
                    exclude_op_names: [],
                    idxcomment: "",
                    index_oid: 0,
                    old_node: 0,
                    old_create_subid: 0,
                    old_first_relfilenode_subid: 0,
                    unique: false,
                    nulls_not_distinct: false,
                    primary: false,
                    isconstraint: false,
                    deferrable: false,
                    initdeferred: false,
                    transformed: false,
                    concurrent: false,
                    if_not_exists: false,
                    reset_default_tblspc: false,
                },
            ),
            range: 0..60,
        },
    ],
}
